# vorchestrate

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  SECURITY.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark_stub.py  real_model_benchmark.py
benchmarks/results/: .gitignore
benchmarks/results/real_model/: README.md  benchmark_summary.json  run_rows.csv
docs/: api.md  architecture.md  architecture.mmd  benchmark_plan.md  design_principles.md  limitations.md  real_model_validation.md  roadmap.md  visualization.md
examples/: README.md  basic_usage.py  moe_usage.py  render_trace_report.py  simulated_trace.py
tests/: test_adapter_base.py  test_constants.py  test_guardrail.py  test_huggingface_integration.py  test_integration_heuristics.py  test_metrics.py  test_real_model_benchmark.py  test_registry.py  test_scheduler.py  test_scorer.py  test_simulation.py  test_state_machine.py  test_trace_utils.py  test_visualization.py
vorchestrate/: __init__.py
vorchestrate/benchmarks/: __init__.py  memory_profile.py  quality_check.py  real_model.py
vorchestrate/core/: __init__.py  constants.py  guardrail.py  metrics.py  registry.py  scheduler.py  scorer.py  state_machine.py
vorchestrate/integrations/: __init__.py  base.py  decoder_only.py  huggingface.py  vllm.py
vorchestrate/utils/: __init__.py  simulation.py  trace.py  visualization.py
