[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vorchestrate"
version = "0.1.0"
description = "Predictive multi-tier weight residency orchestration for transformer inference"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Manish Lachwani" }
]
dependencies = [
  "torch>=2.0",
  "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
