[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vorchestrate"
version = "0.1.0"
description = "Predictive multi-tier weight residency orchestration for transformer inference"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Manish Lachwani" }
]
dependencies = [
  "torch>=2.0",
  "numpy",
]

[project.optional-dependencies]
dev = [
  "matplotlib>=3.8",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/manishklach/vorchestrate"
Repository = "https://github.com/manishklach/vorchestrate"
Issues = "https://github.com/manishklach/vorchestrate/issues"

[tool.setuptools.packages.find]
include = ["vorchestrate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["vorchestrate"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
